manifests-successful/snapshot-controller-3.0.4.tgz-manifest.yaml
---
# Source: snapshot-controller/templates/service_validation_webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-controller-3.0.4
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v8.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: my-release
---
# Source: snapshot-controller/templates/deployment_controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-snapshot-controller
  labels:
    helm.sh/chart: snapshot-controller-3.0.4
    app.kubernetes.io/name: snapshot-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v8.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snapshot-controller
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-snapshot-controller
      securityContext:
        {}
      containers:
        - name: snapshot-controller
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "registry.k8s.io/sig-storage/snapshot-controller:v8.0.1"
          imagePullPolicy: IfNotPresent
          args:
            - --http-endpoint=:8080
            - --leader-election=true
            - --leader-election-namespace=$(NAMESPACE)
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              port: http
              path: /healthz/leader-election
              scheme: HTTP
          livenessProbe:
            httpGet:
              port: http
              path: /healthz/leader-election
              scheme: HTTP
          resources:
            {}
      hostNetwork: false
      dnsPolicy: ClusterFirst
---
# Source: snapshot-controller/templates/deployment_validation_webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-controller-3.0.4
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v8.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: snapshot-validation-webhook
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: snapshot-validation-webhook
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-snapshot-validation-webhook
      securityContext:
        {}
      containers:
        - name: snapshot-validation-webhook
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "registry.k8s.io/sig-storage/snapshot-validation-webhook:v8.0.1"
          imagePullPolicy: IfNotPresent
          args:
            - --port=8443
            - --tls-cert-file=/etc/snapshot-validation/tls.crt
            - --tls-private-key-file=/etc/snapshot-validation/tls.key
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/snapshot-validation
              name: tls-config
          livenessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          resources:
            {}
      volumes:
        - name: tls-config
          secret:
            secretName: my-release-snapshot-validation-webhook-tls
      hostNetwork: false
      dnsPolicy: ClusterFirst
---
# Source: snapshot-controller/templates/webhook.yaml
# Check if the TLS secret already exists and initialize variables for later use at the top level
---
# Source: snapshot-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-snapshot-validation-webhook
  labels:
    helm.sh/chart: snapshot-controller-3.0.4
    app.kubernetes.io/name: snapshot-validation-webhook
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v8.0.1"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: snapshot-validation-webhook.snapshot.storage.k8s.io
    rules:
      - apiGroups:
        - snapshot.storage.k8s.io
        apiVersions:
        - v1
        operations:
        - CREATE
        - UPDATE
        resources:
        - volumesnapshotclasses
        scope: "*"
    clientConfig:
      service:
        namespace: snapshot-controller-3.0.4.tgz
        name: my-release-snapshot-validation-webhook
        path: "/volumesnapshot"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4akNDQXE2Z0F3SUJBZ0lRVE92UGU2Wk1VSlhBL3ljWTFTZVBpakFOQmdrcWhraUc5dzBCQVFzRkFEQlQKTVZFd1R3WURWUVFERTBodGVTMXlaV3hsWVhObExYTnVZWEJ6YUc5MExYWmhiR2xrWVhScGIyNHRkMlZpYUc5dgpheTV6Ym1Gd2MyaHZkQzFqYjI1MGNtOXNiR1Z5TFRNdU1DNDBMblJuZWk1emRtTXdIaGNOTWpRd05qSXdNVFExCk9EUTBXaGNOTXpRd05qRTRNVFExT0RRMFdqQlRNVkV3VHdZRFZRUURFMGh0ZVMxeVpXeGxZWE5sTFhOdVlYQnoKYUc5MExYWmhiR2xrWVhScGIyNHRkMlZpYUc5dmF5NXpibUZ3YzJodmRDMWpiMjUwY205c2JHVnlMVE11TUM0MApMblJuZWk1emRt [...]
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 2
  - name: snapshot-validation-webhook.groupsnapshot.storage.k8s.io
    rules:
      - apiGroups:
          - groupsnapshot.storage.k8s.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - volumegroupsnapshotclasses
        scope: "*"
    clientConfig:
      service:
        namespace: snapshot-controller-3.0.4.tgz
        name: my-release-snapshot-validation-webhook
        path: "/volumegroupsnapshot"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR4akNDQXE2Z0F3SUJBZ0lRVE92UGU2Wk1VSlhBL3ljWTFTZVBpakFOQmdrcWhraUc5dzBCQVFzRkFEQlQKTVZFd1R3WURWUVFERTBodGVTMXlaV3hsWVhObExYTnVZWEJ6YUc5MExYWmhiR2xrWVhScGIyNHRkMlZpYUc5dgpheTV6Ym1Gd2MyaHZkQzFqYjI1MGNtOXNiR1Z5TFRNdU1DNDBMblJuZWk1emRtTXdIaGNOTWpRd05qSXdNVFExCk9EUTBXaGNOTXpRd05qRTRNVFExT0RRMFdqQlRNVkV3VHdZRFZRUURFMGh0ZVMxeVpXeGxZWE5sTFhOdVlYQnoKYUc5MExYWmhiR2xrWVhScGIyNHRkMlZpYUc5dmF5NXpibUZ3YzJodmRDMWpiMjUwY205c2JHVnlMVE11TUM0MApMblJuZWk1emRt [...]
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 2
